.metadata/.plugins/org.eclipse.cdt.ui/scheduler.build.log
13:00:16 **** Incremental Build of configuration Debug for project scheduler ****
make all 
Building file: ../cpp_node_conn/test.cpp
Invoking: GCC C++ Compiler
g++ -I/home/pfe/dev/libraries/libnova-0.15.0/src -I/home/pfe/dev/Cpp/Libraries/pagmo/src -I"/home/pfe/dev/Graduation_project/scheduler/Model" -include/home/pfe/dev/Cpp/Libraries/libnova-0.15.0/src/libnova/libnova.h -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"cpp_node_conn/test.d" -MT"cpp_node_conn/test.o" -o "cpp_node_conn/test.o" "../cpp_node_conn/test.cpp"
In file included from /usr/include/node/node.h:42:0,
                 from ../cpp_node_conn/test.cpp:8:
/usr/include/node/v8.h:336:1: error: expected unqualified-id before ‘using’
 using Handle = Local<T>;
 ^
/usr/include/node/v8.h: In constructor ‘v8::MaybeLocal<T>::MaybeLocal()’:
/usr/include/node/v8.h:353:33: error: ‘nullptr’ was not declared in this scope
   V8_INLINE MaybeLocal() : val_(nullptr) {}
                                 ^
/usr/include/node/v8.h: In member function ‘bool v8::MaybeLocal<T>::IsEmpty() const’:
/usr/include/node/v8.h:360:51: error: ‘nullptr’ was not declared in this scope
   V8_INLINE bool IsEmpty() const { return val_ == nullptr; }
                                                   ^
/usr/include/node/v8.h: In member function ‘bool v8::MaybeLocal<T>::ToLocal(v8::Local<S>*) const’:
/usr/include/node/v8.h:364:29: error: ‘nullptr’ was not declared in this scope
     out->val_ = IsEmpty() ? nullptr : this->val_;
                             ^
/usr/include/node/v8.h: In member function ‘bool v8::WeakCallbackInfo<T>::IsFirstPass() const’:
/usr/include/node/v8.h:430:50: error: ‘nullptr’ was not declared in this scope
   bool IsFirstPass() const { return callback_ != nullptr; }
                                                  ^
/usr/include/node/v8.h: At global scope:
/usr/include/node/v8.h:469:1: error: expected unqualified-id before ‘using’
 using PhantomCallbackData = WeakCallbackInfo<T>;
 ^
/usr/include/node/v8.h:818:26: error: expected ‘,’ or ‘...’ before ‘&&’ token
   V8_INLINE Global(Global&& other) : PersistentBase<T>(other.val_) {
                          ^
/usr/include/node/v8.h:818:34: error: invalid constructor; you probably meant ‘v8::Global<T> (const v8::Global<T>&)’
   V8_INLINE Global(Global&& other) : PersistentBase<T>(other.val_) {
                                  ^
/usr/include/node/v8.h:826:40: error: expected ‘,’ or ‘...’ before ‘&&’ token
   V8_INLINE Global& operator=(Global<S>&& rhs) {
                                        ^
/usr/include/node/v8.h: In constructor ‘v8::Global<T>::Global()’:
/usr/include/node/v8.h:794:42: error: ‘nullptr’ was not declared in this scope
   V8_INLINE Global() : PersistentBase<T>(nullptr) {}
                                          ^
/usr/include/node/v8.h: In member function ‘v8::Global<T>& v8::Global<T>::operator=(v8::Global<S>)’:
/usr/include/node/v8.h:828:18: error: ‘rhs’ was not declared in this scope
     if (this != &rhs) {
                  ^
/usr/include/node/v8.h:831:18: error: ‘nullptr’ was not declared in this scope
       rhs.val_ = nullptr;
                  ^
/usr/include/node/v8.h: In member function ‘v8::Global<T> v8::Global<T>::Pass()’:
/usr/include/node/v8.h:838:44: error: expected ‘>’ before ‘&&’ token
   Global Pass() { return static_cast<Global&&>(*this); }
                                            ^
/usr/include/node/v8.h:838:44: error: expected ‘(’ before ‘&&’ token
/usr/include/node/v8.h:838:46: error: expected identifier before ‘>’ token
   Global Pass() { return static_cast<Global&&>(*this); }
                                              ^
/usr/include/node/v8.h:838:54: error: expected ‘)’ before ‘;’ token
   Global Pass() { return static_cast<Global&&>(*this); }
                                                      ^
/usr/include/node/v8.h: At global scope:
/usr/include/node/v8.h:856:1: error: expected unqualified-id before ‘using’
 using UniquePersistent = Global<T>;
 ^
In file included from /usr/include/node/v8.h:23:0,
                 from /usr/include/node/node.h:42,
                 from ../cpp_node_conn/test.cpp:8:
/usr/include/node/v8.h:1093:10: error: ‘nullptr’ was not declared in this scope
   static V8_DEPRECATE_SOON(
          ^
In file included from /usr/include/node/node.h:42:0,
                 from ../cpp_node_conn/test.cpp:8:
/usr/include/node/v8.h:1099:30: error: ‘nullptr’ was not declared in this scope
       ScriptOrigin* origin = nullptr);
                              ^
/usr/include/node/v8.h:2280:42: error: ‘v8::NewStringType’ is not a class or namespace
     kNormalString = static_cast<int>(v8::NewStringType::kNormal),
                                          ^
/usr/include/node/v8.h:2281:48: error: ‘v8::NewStringType’ is not a class or namespace
     kInternalizedString = static_cast<int>(v8::NewStringType::kInternalized)
                                                ^
/usr/include/node/v8.h: In member function ‘v8::MaybeLocal<v8::Object> v8::Function::NewInstance(v8::Local<v8::Context>) const’:
/usr/include/node/v8.h:3204:36: error: ‘nullptr’ was not declared in this scope
     return NewInstance(context, 0, nullptr);
                                    ^
/usr/include/node/v8.h: At global scope:
/usr/include/node/v8.h:3433:38: error: ‘ArrayBufferCreationMode’ is not a class or namespace
       ArrayBufferCreationMode mode = ArrayBufferCreationMode::kExternalized);
                                      ^
/usr/include/node/v8.h:3796:38: error: ‘ArrayBufferCreationMode’ is not a class or namespace
       ArrayBufferCreationMode mode = ArrayBufferCreationMode::kExternalized);
                                      ^
/usr/include/node/v8.h:4456:36: error: ‘PropertyHandlerFlags’ is not a class or namespace
       PropertyHandlerFlags flags = PropertyHandlerFlags::kNone)
                                    ^
/usr/include/node/v8.h:4484:36: error: ‘PropertyHandlerFlags’ is not a class or namespace
       PropertyHandlerFlags flags = PropertyHandlerFlags::kNone)
                                    ^
/usr/include/node/v8.h: In member function ‘void v8::ObjectTemplate::SetIndexedPropertyHandler(v8::IndexedPropertyGetterCallback, v8::IndexedPropertySetterCallback, v8::IndexedPropertyQueryCallback, v8::IndexedPropertyDeleterCallback, v8::IndexedPropertyEnumeratorCallback, v8::Local<v8::Value>)’:
/usr/include/node/v8.h:4616:77: error: call to ‘v8::IndexedPropertyHandlerConfiguration::IndexedPropertyHandlerConfiguration(v8::IndexedPropertyGetterCallback, v8::IndexedPropertySetterCallback, v8::IndexedPropertyQueryCallback, v8::IndexedPropertyDeleterCallback, v8::IndexedPropertyEnumeratorCallback, v8::Local<v8::Value>, v8::PropertyHandlerFlags)’ uses the default argument for parameter 7, which is not yet defined
                                                    deleter, enumerator, data));
                                                                             ^
In file included from /usr/include/node/v8.h:23:0,
                 from /usr/include/node/node.h:42,
                 from ../cpp_node_conn/test.cpp:8:
/usr/include/node/v8.h: In member function ‘v8::Local<T> v8::MaybeLocal<T>::ToLocalChecked()’:
/usr/include/node/v8.h:7154:7: error: ‘nullptr’ was not declared in this scope
   if (V8_UNLIKELY(val_ == nullptr)) V8::ToLocalEmpty();
       ^
In file included from /usr/include/node/node.h:42:0,
                 from ../cpp_node_conn/test.cpp:8:
/usr/include/node/v8.h: In member function ‘void v8::Template::Set(v8::Isolate*, const char*, v8::Local<v8::Data>)’:
/usr/include/node/v8.h:7599:46: error: ‘NewStringType’ is not a class or namespace
   Set(v8::String::NewFromUtf8(isolate, name, NewStringType::kNormal)
                                              ^
../cpp_node_conn/test.cpp: In function ‘void demo::CreateObject(const v8::FunctionCallbackInfo<v8::Value>&)’:
../cpp_node_conn/test.cpp:29:3: error: ‘MyObject’ has not been declared
   MyObject::NewInstance(args);
   ^
../cpp_node_conn/test.cpp: In function ‘void demo::InitAll(v8::Local<v8::Object>, v8::Local<v8::Object>)’:
../cpp_node_conn/test.cpp:34:3: error: ‘MyObject’ has not been declared
   MyObject::Init(exports->GetIsolate());
   ^
make: *** [cpp_node_conn/test.o] Erreur 1

13:05:18 Build Finished (took 5m:2s.571ms)

